  BASIC stored as text). The file type is associated with Matrix Brandy for
  loading and running by double-clicking on the desktop.
- System: RISC OS: MODE in form xres,yres,depth was broken. Fixed.
- Graphics: Reworked line drawing, the earlier adaption of upstream was not
  right. This new version is based on PiTubeDirect's implementation.
- Graphics: Dot patterns and VDU23,6 now implemented
- Graphics: Fixed a crash bug due to SDL not being particularly thread-safe.
- BASIC: PRINT and STR$ now support displaying a decimal comma instead of a
  point.
- BASIC: PRINT and STR$ now show exponents in the style used by the BBC and
  RISC OS, rather than the C standard.
- BASIC: @% precisions greater than &11xx are now capped at &11xx.
- BASIC: LVAR now includes @% in its output, displaying both in hex and its
  string form.
- BASIC: Extended TRACE with TRACE VDU [OFF], this redirects TRACE output to
  Brandy's controlling terminal, specifying OFF puts it back to normal.

* V1.22.12 - 05 December 2021
- System: Fix some floating-point data size mismatches
- System: Fix calculations of matrix dot products (thank you 
  mikefairbank@Github!)
- System: New RISC OS build process using GCCSDK under Linux (thank you
  Cameron Cawley!)
- Keyboard: Fixed keyboard from eating too much from event queue (thanks
  David Hawes!)
- Graphics: Implemented GCOL action codes 5-7
- Graphics: Hopefully fixed a triangle drawing bug.
- Graphics: Implement VDU23,16 (as far as already implemented) in VDU5 mode.
- Teletext: Implemented VDU23,18,4,pri,alt| to select character sets.
  This is much cleaner than using SAA505Xlib in the examples, but that will
  remain as an example for OSWORDs &8B and &8C.
- BASIC: Fix COLOUR(r,g,b) function to return correct values in 256-colour
  modes.
- BASIC: Fix behaviour of RND followed by a space before parentheses to match
  ARM and 6502 BBC BASIC.
- BASIC: Change the behaviour of cascaded IF calls to match the behaviour of