@@ -20,12 +20,15 @@ ChangeLog for Matrix Brandy - as forked from Sourceforge after V1.20.1
 - System: RISC OS: MODE in form xres,yres,depth was broken. Fixed.
 - Graphics: Reworked line drawing, the earlier adaption of upstream was not
   right. This new version is based on PiTubeDirect's implementation.
-- Graphics: Dot patterns and VDU23,6 now implemented
+- Graphics: Dot patterns, VDU23,6 and OSBYTE 163,242 now implemented
 - Graphics: Fixed a crash bug due to SDL not being particularly thread-safe.
 - BASIC: PRINT and STR$ now support displaying a decimal comma instead of a
   point.
 - BASIC: PRINT and STR$ now show exponents in the style used by the BBC and
   RISC OS, rather than the C standard.
+- BASIC: @% with precision 0 now uses &11, same as ARM BBC BASIC VI.
+- BASIC: @% with width set to 0 now left-justifies, as per Acorn BASICs,
+  RTR's assembly-language builds and (as of V0.40) BB4C.
 - BASIC: @% precisions greater than &11xx are now capped at &11xx.
 - BASIC: LVAR now includes @% in its output, displaying both in hex and its
   string form.
